Changed the image to a red makerspace

--- a/client/src/styles/_core.scss
+++ b/client/src/styles/_core.scss
@@ -6,11 +6,11 @@ $font-height: 1.5;
 .home_section {
   position: relative;
   z-index: 1;
-  height: 900px;
+  height: 500px;
 }
 
 .home_section_bg {
-  background-image: url("../static/city.jpg");
+  background-image: url("../static/makerspaceRed.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
