--- a/client/src/styles/_core.scss
+++ b/client/src/styles/_core.scss
@@ -2,11 +2,37 @@ $font-family: 'Proxima Nova', "Open Sans", "Gill Sans MT", "Gill Sans", Corbel, 
 $font-height: 1.5;
 
 //new stuff that i have used from other thing
+.container {
+  padding: 40px;
+  background-color: blue;
+}
 
 .home_section {
   position: relative;
   z-index: 1;
-  height: 500px;
+  height: 600px;
+}
+
+.home_title {
+  color: white;
+  font-size: 80px;
+  padding: 20px;
+  margin-top: 80px;
+  margin-left: 20px;
+  margin-bottom: 80px;
+  margin-right: 0px;
+
+}
+
+.home_subtitle {
+  color: white;
+  font-size: 60px;
+  padding: 20px;
+  margin-top: 80px;
+  margin-left: 20px;
+  margin-bottom: 80px;
+  margin-right: 0px;
+
 }
 
 .home_section_bg {
