Added basic stuff for the about sectino on the home page.

--- a/client/src/styles/_core.scss
+++ b/client/src/styles/_core.scss
@@ -46,10 +46,22 @@ $font-height: 1.5;
   background-position: left;
 }
 
-.about_title {
+.about_smalltitle {
   color: blue;
   font-size: 20px;
   padding: 20px;
+}
+
+.about_title {
+  color: black;
+  font-size: 60px;
+  padding: 20px;
+}
+
+.about_subtitle {
+  color: black;
+  font-size: 20px;
+  padding: 40px;
 }
 
 .section_padding {
