Made the login page

--- a/client/src/styles/_core.scss
+++ b/client/src/styles/_core.scss
@@ -6,6 +6,11 @@ $font-height: 1.5;
   padding: 40px;
 }
 
+.login_button {
+  text-align: right;
+  margin-left: 950px;
+}
+
 .home_section {
   position: relative;
   z-index: 1;
