--- a/client/src/styles/_core.scss
+++ b/client/src/styles/_core.scss
@@ -6,6 +6,10 @@ $font-height: 1.5;
   padding: 20px;
 }
 
+.test_div {
+  background-color: #4488EE;
+}
+
 .header {
   background-color: red;
   padding-bottom: 5px;
@@ -62,6 +66,12 @@ $font-height: 1.5;
   background-position: left;
 }
 
+.about_section_img {
+  position: relative;
+  z-index: 1;
+  height: 100px;
+}
+
 .about_smalltitle {
   color: blue;
   font-size: 20px;
@@ -82,10 +92,38 @@ $font-height: 1.5;
 
 .about_bg {
   background-image: url("../static/makerspaceVert.JPG");
-  width: 100px;
+  width: 400px;
+  height: 200px;
+  padding: 100px;
+  margin-left: 600px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.login_container{
+  padding: 100px;
+}
+
+.login_section {
+  position: relative;
+  z-index: 1;
   height: 400px;
-  padding: 400px;
-  margin-left: 500px;
+}
+
+.login_bg {
+  background-image: url("../static/makerspaceRed.png");
+  padding: 80px;
+  padding-left: 400px;
+  padding-right: 400px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.login_box {
+  padding: 200px;
+  background-color: #6699EE
 }
 
 .section_padding {
