--- a/client/src/styles/_core.scss
+++ b/client/src/styles/_core.scss
@@ -113,7 +113,7 @@ $font-height: 1.5;
 
 .login_bg {
   background-image: url("../static/makerspaceRed.png");
-  padding: 80px;
+  padding: 50px;
   padding-left: 400px;
   padding-right: 400px;
   background-position: center;
@@ -122,8 +122,23 @@ $font-height: 1.5;
 }
 
 .login_box {
-  padding: 200px;
+  padding: 50px;
   background-color: #6699EE
+}
+
+.login_title {
+  text-align: center;
+  margin-left: 125px;
+  font-size: 40px;
+}
+
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
 
 .section_padding {
