--- a/client/src/styles/_core.scss
+++ b/client/src/styles/_core.scss
@@ -20,7 +20,7 @@ $font-height: 1.5;
   font-size: 25px;
 }
 
-.login_button {
+.home_login_button {
   text-align: right;
   font-size: 25px;
   margin-left: 790px;
@@ -108,7 +108,7 @@ $font-height: 1.5;
 .login_section {
   position: relative;
   z-index: 1;
-  height: 400px;
+  height: 455px;
 }
 
 .login_bg {
@@ -123,6 +123,7 @@ $font-height: 1.5;
 
 .login_box {
   padding: 50px;
+  padding-top: 30px;
   background-color: #6699EE
 }
 
@@ -130,6 +131,16 @@ $font-height: 1.5;
   text-align: center;
   margin-left: 125px;
   font-size: 40px;
+}
+
+.login_subtitle {
+  text-align: center;
+  margin-left: 90px;
+  font-size: 20px;
+}
+
+.login_button {
+  margin-left: 320px;
 }
 
 input[type=text], input[type=password] {
