--- a/client/src/styles/_core.scss
+++ b/client/src/styles/_core.scss
@@ -2,6 +2,11 @@ $font-family: 'Proxima Nova', "Open Sans", "Gill Sans MT", "Gill Sans", Corbel, 
 $font-height: 1.5;
 
 //new stuff that i have used from other thing
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   padding: 10px;
 }
@@ -20,9 +25,67 @@ a.button {
 }
 
 .header {
-  background-color: #BD4BF7;
-  padding-bottom: 5px;
-  padding-left: 20px;
+  padding: 20px 40px 25px 40px;
+}
+
+.logo {
+  background-image: url("../static/roboticsLogo.png");
+}
+
+.menu-area li a {
+  text-decoration: none;
+  color: #fff;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  display: block;
+  padding: 0 25px;
+  font-size: 14px;
+  line-height: 30px;
+  position: relative;
+  z-index: 1;
+}
+
+.menu-area li {
+  list-style: none;
+  display: inline-block;
+}
+
+nav {
+  position: relative;
+  padding: 15px 30px 12px 30px;
+  text-align: right;
+  z-index: 1;
+  background: #333;
+  margin: 0 auto;
+  width: calc(100% - 60px);
+}
+
+nav:before {
+  position: absolute;
+  content: '';
+  left: 0;
+  top: 100%;
+  border-top: 10px solid #333;
+  border-right: 10px solid #333;
+  border-left: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
+
+nav:after {
+  position: absolute;
+  content: '';
+  right: 0;
+  top: 100%;
+  border-top: 10px solid #333;
+  border-left: 10px solid #333;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
+
+.menu-area li a:hover{
+  background: tomato;
+  color: #fff;
+
 }
 
 .header_text {
@@ -45,7 +108,6 @@ a.button {
   color: white;
   font-size: 80px;
   padding: 5px;
-  background-color: #0099FF;
   margin-left: 350px;
 
 }
@@ -54,7 +116,6 @@ a.button {
   color: white;
   font-size: 60px;
   padding: 5px;
-  background-color: #0033FF;
   margin-left: 530px;
   margin-bottom: 80px;
   margin-right: 0px;
@@ -62,7 +123,7 @@ a.button {
 }
 
 .home_section_bg {
-  background-image: url("../static/makerspaceRed.png");
+  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../static/sackville-makerspace.jpeg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
