Wokred on project section

--- a/client/src/styles/_core.scss
+++ b/client/src/styles/_core.scss
@@ -118,6 +118,13 @@ a.button {
   background-size: cover;
 }
 
+.projects_title {
+  color: black;
+  font-size: 40px;
+  padding: 20px;
+  margin-left: 480px;
+}
+
 .projects_section {
   position: relative;
   z-index: 99;
