--- a/client/src/styles/_core.scss
+++ b/client/src/styles/_core.scss
@@ -17,7 +17,14 @@ a.button {
     appearance: button;
 
     text-decoration: none;
-    color: initial;
+    background-color: #60a9f7; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
 
 .test_div {
@@ -26,10 +33,6 @@ a.button {
 
 .header {
   padding: 20px 40px 25px 40px;
-}
-
-.logo {
-  background-image: url("../static/roboticsLogo.png");
 }
 
 .menu-area li a {
