--- a/client/src/styles/_core.scss
+++ b/client/src/styles/_core.scss
@@ -267,6 +267,37 @@ nav:after {
   font-size: 15px;
 }
 
+.contact_section {
+  position: relative;
+  z-index: 99;
+  background-repeat: no-repeat;
+  background-position: left;
+  padding: 60px;
+}
+
+.contact_container {
+  margin-top: 60px;
+  padding: 10px;
+  float: left;
+}
+
+.contact_title {
+  color: black;
+  font-size: 40px;
+  padding: 20px;
+}
+
+.contact_smalltitle {
+  color: blue;
+  font-size: 20px;
+  padding: 20px;
+}
+
+.contact-info {
+  margin: 40px;
+  font-size: 20px;
+}
+
 .login_container{
   padding: 100px;
 }
