--- a/client/src/styles/_core.scss
+++ b/client/src/styles/_core.scss
@@ -39,6 +39,12 @@ a.button {
   background-color: blue;
 }
 
+.footer_title {
+  color: white;
+  font-size: 15px;
+  margin-left: 10px;
+}
+
 .logo {
   background-image: url("../static/roboticsLogo.png");
 }
