Final version for the something awesome presentation

--- a/client/src/styles/_core.scss
+++ b/client/src/styles/_core.scss
@@ -39,6 +39,10 @@ a.button {
   background-color: blue;
 }
 
+.WIP {
+  font-size: 120px;
+}
+
 .footer_title {
   color: white;
   font-size: 15px;
@@ -311,6 +315,7 @@ nav:after {
   margin: 40px;
   font-size: 20px;
 }
+
 
 .login_container{
   padding: 100px;
